--- a/configuration.yaml
+++ b/configuration.yaml
@@ -11,7 +11,6 @@ frontend:
   themes: !include_dir_merge_named themes
 
 #------------------- THEMES -----------------------------------|
-#------------------- THEMES -----------------------------------|
 homeassistant:
 
 #------------------- INCLUDE ----------------------------------|
@@ -34,6 +33,9 @@ utility_meter:
     source: sensor.tp_link_vtr300_total_kwh
     cycle: yearly      
 
+#------------------- BROWSER MOD ------------------------------|    
+browser_mod:
+  prefix: 'browser_mod_' 
 
 #------------------- NORDPOOL --------------------------------| 
 nordpool:
@@ -70,6 +72,3 @@ input_boolean: !include_dir_merge_named input_boolean/
 switch: !include_dir_merge_list switches/
 sensor: !include_dir_merge_list sensors/
 binary_sensor: !include_dir_merge_list binary_sensors/
-
-
-
